@@ -7,7 +7,7 @@
 #               2007 Didier Briel, Zoltan Bartko, Martin Fleurke
 #               2008 Andrzej Sawula, Alex Buloichik, Didier Briel, Martin Fleurke
 #               2009 Didier Briel, Alex Buloichik, Martin Fleurke
-#               2010 Didier Briel
+#               2010 Didier Briel, Wildrich Fourie
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -151,6 +151,7 @@ TF_MENU_EDIT_SOURCE_INSERT=I&ns\u00e9rer le texte source
 
 TF_MENU_EDIT_SOURCE_OVERWRITE=Re&mplacer par la source
 TF_MENU_EDIT_EXPORT_SELECTION=Exporter la &s\u00e9lection
+TF_MENU_EDIT_TAGPAINT=Ins\u00e9rer les ba&lises source
 
 TF_MENU_EDIT_COMPARE_1=Choisir la correspondance #&1
 
