@@ -13,6 +13,7 @@ editInsertTranslationMenuItem=meta I
 editOverwriteMachineTranslationMenuItem=meta M
 editOverwriteSourceMenuItem=meta shift R
 editInsertSourceMenuItem=meta shift I
+editTagPainterMenuItem=meta shift T
 editExportSelectionMenuItem=meta shift C
 editFindInProjectMenuItem=meta F
 editSelectFuzzy1MenuItem=meta 1
